[package]
name = "binexp"
version = "0.1.0"
authors = ["Mircea Teodor Oprea <mircea@mirceaoprea.net>"]
license = "MIT"
repository = "https://github.com/Mirch/binexp"
edition = "2021"
rust-version = "1.68"
description = "A struct that represents power of two numbers."

[lib]
name = "binexp"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.43"
